<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="week_days">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>

    </string-array>


    <string-array name="day_hours">
        <item>1PM</item>
        <item>2PM</item>
        <item>3PM</item>
        <item>4PM</item>
        <item>5PM</item>
        <item>6PM</item>
        <item>7PM</item>
        <item>8PM</item>
        <item>9PM</item>
        <item>10PM</item>
        <item>11PM</item>
        <item>12PM</item>
        <item>1AM</item>
        <item>2AM</item>
        <item>3AM</item>
        <item>4AM</item>
        <item>5AM</item>
        <item>6Am</item>
        <item>7AM</item>
        <item>8AM</item>
        <item>9AM</item>
        <item>10AM</item>
        <item>11AM</item>
        <item>12AM</item>

    </string-array>

</resources>